<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_volet_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jdher.tpandroid_notifications.VoletNotification">

    <Button
        android:text="@string/deleteNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:id="@+id/deleteNotificationButton"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Button
        android:text="@string/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:background="@color/blue"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp" />

    <Button
        android:text="@string/nextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/nextActivityButton"
        android:layout_below="@+id/deleteNotificationButton"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/titleVoletActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/titreActivityStyle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
