<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jdher.tpandroid_notifications.MainActivity"
    android:id="@+id/toggle">

    <Button
        android:text="@string/toaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_notification"
        android:layout_marginTop="159dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:background="@color/blue"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/nextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_volet_notification"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:onClick="callVoletNotificationActivity"
        android:layout_below="@+id/add_notification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <TextView
        android:id="@+id/textView"
        android:text="@string/titleMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/titreActivityStyle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
