<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_volet_notification_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jdher.tpandroid_notifications.VoletNotificationCustomLayout">

    <Button
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/notification"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <Button
        android:id="@+id/customnotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificationCustomLayout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:layout_below="@+id/notification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:text="@string/titleVoletLayoutActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/titleTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
